--- a/to-do-1.html
+++ b/to-do-1.html
@@ -5,15 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple To-Do List</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
+        body { font-family: Arial, sans-serif; text-align: center;}
         #todo-container { max-width: 300px; margin: auto; }
         ul { list-style: none; padding: 0; }
-        li { background: #f3f3f3; padding: 8px; margin: 5px; display: flex; justify-content: space-between; }
-        button { background: red; color: white; border: none; cursor: pointer; }
+        li { background: hsl(58, 81%, 50%); padding: 8px; margin: 5px; display: flex; justify-content: space-between; }
+        button { background: rgb(25, 16, 197); color: white; border: none; cursor: pointer;  }
+        section{
+            height: 90vh;
+            width: 100vh;
+            background-color: rgb(244, 65, 65);
+ margin-left: 400px;
+ border-radius: 10px;
+        }
+        input{
+            border-radius: 5px;
+            height: 20px;
+            width: 200px;
+            text-align: center;
+            border: none;
+        }
     </style>
 </head>
-<body>
-    <h2>To-Do List</h2>
+<body> 
+    <section id="design">
+
+
+    <h2 style="padding-top: 10px;">To-Do List</h2>
     <div id="todo-container">
         <input type="text" id="task" placeholder="Enter a task">
         <button onclick="addTask()">Add</button>
@@ -43,5 +60,6 @@
 
 
     </script>
+     </section>
 </body>
 </html>
